Better align download buttons content (Fixes #92)

--- a/feedthefox/base/static/css/app.css
+++ b/feedthefox/base/static/css/app.css
@@ -385,7 +385,7 @@ a.device-list:hover {
 }
 
 .device-body {
-    margin-top: -5px;
+    margin-top: -3px;
 }
 
 .device-body > p {
@@ -436,19 +436,33 @@ a.device-not-option:focus {
 .device-builds {
     display: block;
     margin-bottom: 20px;
-    white-space: normal;
+    min-width: 200px;
+    max-width: 200px;
+    text-align: left;
 }
 
-.device-builds > span {
-    float: left;
-    font-size: 2.5em;
-    margin-right: 2px;
+.build-name {
+    font-weight: bold;
+    text-align: center;
 }
 
-.device-builds > img {
-    float: left;
-    margin-right: 7px;
-    max-width: 2.5em;
+.download-img,
+.download-text {
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 2px;
+}
+
+.download-text > .small {
+    max-width: 132px;
+    white-space: initial;
+    font-size: 70%;
+    text-align: center;
+}
+
+.download-img > .fa {
+    font-size: 1.5em;
 }
 
 @media only screen and (max-width:992px) {
@@ -457,6 +471,7 @@ a.device-not-option:focus {
     }
 
     .device-builds {
+        min-width: 220px;
         max-width: 220px;
     }
 
@@ -589,13 +604,13 @@ footer > .row {
 @media only screen and (max-width:992px) {
     footer,
     .push {
-        height: 250px;
+        height: 270px;
     }
 }
 
 @media only screen and (max-width:460px) {
     footer,
     .push {
-        height: 270px;
+        height: 280px;
     }
 }
